# toygrep

./: Cargo.toml  LICENSE.md  README.md  install.sh
src/: arg_parse.rs  async_line_buffer.rs  buffer.rs  dumb_benchmarks.md  error.rs  line_buffer.rs  main.rs  matcher.rs  print.rs  printer.rs  search.rs  search_target.rs  target.rs  time_log.rs  walker.rs  walker_worker.rs
src/buffer/: async_line_buffer.rs  buffer_pool.rs
src/print/: blocking_printer.rs  null_printer.rs  printer.rs  threaded_printer.rs
