[package]
name = "toygrep"
version = "0.1.0"
authors = ["Andy <andysalerno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
peeking_take_while = "0.1.2"
atty = "0.2.13"

[dependencies.async-std]
version = "1.4.0"
features = ["attributes"]

[profile.release]
panic = 'abort'
debug = true